--- a/app/src/main/res/layout/fragment_card_back.xml
+++ b/app/src/main/res/layout/fragment_card_back.xml
@@ -9,7 +9,7 @@
     android:background="@drawable/tv_all_borders">
 
     <TextView
-        android:id="@+id/card"
+        android:id="@+id/mean"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:paddingBottom="10dp"
@@ -23,9 +23,9 @@
         android:text="영어 뜻 출력" />
 
     <TextView
-        android:id="@+id/pronunciation"
+        android:id="@+id/radix"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:textSize="30sp"
         android:autoSizeTextType="uniform"
         android:autoSizeMaxTextSize="30sp"
@@ -39,15 +39,13 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3.5"
-        android:weightSum="2"
         android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:weightSum="2"
-            android:layout_weight="1">
+            android:weightSum="2">
 
             <TextView
                 android:id="@+id/synonym"
@@ -77,43 +75,6 @@
                 android:text="유의어 단어"
                 android:gravity="center|top"/>
         </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:weightSum="2"
-            android:layout_weight="1">
-
-            <TextView
-                android:id="@+id/synonym2"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:paddingBottom="10dp"
-                android:textSize="25sp"
-                android:autoSizeTextType="uniform"
-                android:autoSizeMaxTextSize="25sp"
-                android:autoSizeMinTextSize="10sp"
-                android:autoSizeStepGranularity="2sp"
-                android:layout_weight="1"
-                android:text="반의어"
-                android:gravity="center"/>
-
-            <TextView
-                android:id="@+id/antonyms2"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:paddingBottom="10dp"
-                android:textSize="30sp"
-                android:autoSizeTextType="uniform"
-                android:autoSizeMaxTextSize="30sp"
-                android:autoSizeMinTextSize="10sp"
-                android:autoSizeStepGranularity="2sp"
-                android:layout_weight="1"
-                android:text="반의어 단어"
-                android:gravity="center|top"/>
-        </LinearLayout>
-
 
     </LinearLayout>
 
