Add Test End Dialog

--- a/app/src/main/res/layout/activity_popup_end.xml
+++ b/app/src/main/res/layout/activity_popup_end.xml
@@ -24,58 +24,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.33" />
+        app:layout_constraintGuide_percent="0.3" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_second"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.66" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline_third"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.96" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline_fourth"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.45" />
+        app:layout_constraintGuide_percent="0.6" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_fifth"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.82" />
-
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:orientation="vertical"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/guideline_first"
-        app:layout_constraintStart_toStartOf="@id/guideline_left"
-        app:layout_constraintEnd_toEndOf="@id/guideline_right">
-
-        <TextView
-            android:id="@+id/reset_title"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:autoSizeTextType="uniform"
-            android:autoSizeMinTextSize="10sp"
-            android:autoSizeMaxTextSize="40sp"
-            android:autoSizeStepGranularity="2sp"
-            android:gravity="center"
-            android:textStyle="bold"
-            android:textColor="@color/black"
-            android:background="@color/transparent"/>
-    </LinearLayout>
+        app:layout_constraintGuide_percent="0.8" />
 
     <LinearLayout
         android:layout_width="0dp"
@@ -87,7 +50,7 @@
         app:layout_constraintEnd_toEndOf="@id/guideline_right"
         android:layout_marginVertical="20dp">
 
-        <EditText
+        <TextView
             android:id="@+id/reset_context"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -95,10 +58,9 @@
             android:autoSizeMinTextSize="10sp"
             android:autoSizeStepGranularity="2sp"
             android:autoSizeTextType="uniform"
-            android:background="@drawable/tv_all_borders"
             android:gravity="center"
             android:textColor="@color/black"
-            android:imeOptions="actionDone"/>
+            android:text="테스트가 종료되었습니다"/>
     </LinearLayout>
 
     <LinearLayout
@@ -106,42 +68,24 @@
         android:layout_height="0dp"
         android:orientation="horizontal"
         app:layout_constraintTop_toTopOf="@id/guideline_fifth"
-        app:layout_constraintBottom_toBottomOf="@id/guideline_third"
-        app:layout_constraintStart_toStartOf="@id/guideline_fourth"
-        app:layout_constraintEnd_toEndOf="@id/guideline_right"
-        android:weightSum="2">
-
-        <Button
-            android:id="@+id/btn_reset_cancel"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:autoSizeMaxTextSize="40dp"
-            android:autoSizeMinTextSize="10sp"
-            android:autoSizeStepGranularity="2sp"
-            android:autoSizeTextType="uniform"
-            android:background="@color/transparent"
-            android:clickable="true"
-            android:onClick="onTouchCancel"
-            android:text="취소"
-            android:textColor="#7A7A7A"
-            android:textStyle="bold" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <Button
             android:id="@+id/btn_reset_confirm"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
             android:autoSizeMaxTextSize="40dp"
-            android:autoSizeMinTextSize="10sp"
+            android:autoSizeMinTextSize="25sp"
             android:autoSizeStepGranularity="2sp"
             android:autoSizeTextType="uniform"
-            android:background="@color/transparent"
+            android:background="@drawable/top_border_rect"
             android:clickable="true"
             android:onClick="onTouchConfirm"
             android:text="확인"
             android:textColor="#9090FF"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
