--- a/app/src/main/res/layout/fragment_card_back.xml
+++ b/app/src/main/res/layout/fragment_card_back.xml
@@ -9,7 +9,7 @@
     android:background="@drawable/tv_all_borders">
 
     <TextView
-        android:id="@+id/card"
+        android:id="@+id/mean"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:paddingBottom="10dp"
@@ -23,7 +23,7 @@
         android:text="영어 뜻 출력" />
 
     <TextView
-        android:id="@+id/pronunciation"
+        android:id="@+id/radix"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:textSize="30sp"
@@ -39,82 +39,35 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3.5"
-        android:weightSum="2"
-        android:orientation="horizontal">
+        android:weightSum="3"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/synonym"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:paddingBottom="10dp"
+            android:textSize="25sp"
+            android:autoSizeTextType="uniform"
+            android:autoSizeMaxTextSize="25sp"
+            android:autoSizeMinTextSize="10sp"
+            android:autoSizeStepGranularity="2sp"
+            android:text="유의어"
+            android:gravity="center"/>
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:weightSum="2"
-            android:layout_weight="1">
-
-            <TextView
-                android:id="@+id/synonym"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:paddingBottom="10dp"
-                android:textSize="25sp"
-                android:autoSizeTextType="uniform"
-                android:autoSizeMaxTextSize="25sp"
-                android:autoSizeMinTextSize="10sp"
-                android:autoSizeStepGranularity="2sp"
-                android:layout_weight="1"
-                android:text="유의어"
-                android:gravity="center"/>
-
-            <TextView
-                android:id="@+id/antonyms"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:paddingBottom="10dp"
-                android:textSize="30sp"
-                android:autoSizeTextType="uniform"
-                android:autoSizeMaxTextSize="30sp"
-                android:autoSizeMinTextSize="10sp"
-                android:autoSizeStepGranularity="2sp"
-                android:layout_weight="1"
-                android:text="유의어 단어"
-                android:gravity="center|top"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:weightSum="2"
-            android:layout_weight="1">
-
-            <TextView
-                android:id="@+id/synonym2"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:paddingBottom="10dp"
-                android:textSize="25sp"
-                android:autoSizeTextType="uniform"
-                android:autoSizeMaxTextSize="25sp"
-                android:autoSizeMinTextSize="10sp"
-                android:autoSizeStepGranularity="2sp"
-                android:layout_weight="1"
-                android:text="반의어"
-                android:gravity="center"/>
-
-            <TextView
-                android:id="@+id/antonyms2"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:paddingBottom="10dp"
-                android:textSize="30sp"
-                android:autoSizeTextType="uniform"
-                android:autoSizeMaxTextSize="30sp"
-                android:autoSizeMinTextSize="10sp"
-                android:autoSizeStepGranularity="2sp"
-                android:layout_weight="1"
-                android:text="반의어 단어"
-                android:gravity="center|top"/>
-        </LinearLayout>
-
-
+        <TextView
+            android:id="@+id/antonyms"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:paddingBottom="10dp"
+            android:textSize="30sp"
+            android:autoSizeTextType="uniform"
+            android:autoSizeMaxTextSize="30sp"
+            android:autoSizeMinTextSize="10sp"
+            android:autoSizeStepGranularity="2sp"
+            android:text="유의어 단어"
+            android:gravity="center|top"/>
     </LinearLayout>
 
 </LinearLayout>
