--- a/app/src/main/res/layout/fragment_word_list.xml
+++ b/app/src/main/res/layout/fragment_word_list.xml
@@ -6,7 +6,8 @@
     <ListView
         android:id="@+id/card_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginVertical="40dp">
 
     </ListView>
 </androidx.constraintlayout.widget.ConstraintLayout>
