--- a/app/src/main/res/layout/activity_first_start.xml
+++ b/app/src/main/res/layout/activity_first_start.xml
@@ -31,7 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.3" />
+        app:layout_constraintGuide_percent="0.25" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_target_bottom"
@@ -82,7 +82,7 @@
             android:layout_height="match_parent"
             android:autoSizeTextType="uniform"
             android:autoSizeMinTextSize="10sp"
-            android:autoSizeMaxTextSize="50sp"
+            android:autoSizeMaxTextSize="40sp"
             android:autoSizeStepGranularity="2sp"
             android:gravity="left|center"
             android:textColor="#000000"
@@ -94,7 +94,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="vertical"
-        android:weightSum="6"
+        android:weightSum="8"
         app:layout_constraintBottom_toTopOf="@+id/guideline_target_bottom"
         app:layout_constraintEnd_toEndOf="@id/guideline_target_end"
         app:layout_constraintStart_toStartOf="@id/guideline_left"
@@ -161,6 +161,32 @@
             android:maxLength="3"
             android:selectAllOnFocus="true"
             android:imeOptions="actionDone"/>
+
+        <TextView
+            android:id="@+id/test_time_tv"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:autoSizeMaxTextSize="32dp"
+            android:autoSizeMinTextSize="10sp"
+            android:autoSizeStepGranularity="2sp"
+            android:autoSizeTextType="uniform"
+            android:gravity="bottom|left"
+            android:text="일일 시험 시간"
+            android:textColor="@color/black" />
+
+        <TextView
+            android:id="@+id/test_time"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:autoSizeMinTextSize="15sp"
+            android:autoSizeMaxTextSize="18sp"
+            android:autoSizeStepGranularity="2sp"
+            android:autoSizeTextType="uniform"
+            android:paddingStart="10dp"
+            android:gravity="center|left"
+            android:textColor="@color/black"/>
 
         <TextView
             android:id="@+id/target_day_tv"
