--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -107,6 +107,7 @@
         </TextView>
 
         <TextView
+            android:id="@+id/tv_Dday"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="2"
