--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="gray">#808080</color>
     <color name="white">#FFFFFFFF</color>
     <color name="transparent">#00ff0000</color>
+    <color name="testable">#CED9EA</color>
 </resources>
