Modify DB change and test end pop-up window

--- a/app/src/main/res/layout/activity_popup_end.xml
+++ b/app/src/main/res/layout/activity_popup_end.xml
@@ -44,8 +44,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="vertical"
-        app:layout_constraintTop_toTopOf="@id/guideline_first"
-        app:layout_constraintBottom_toBottomOf="@id/guideline_second"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/guideline_fifth"
         app:layout_constraintStart_toStartOf="@id/guideline_left"
         app:layout_constraintEnd_toEndOf="@id/guideline_right"
         android:layout_marginVertical="20dp">
@@ -54,7 +54,7 @@
             android:id="@+id/end_test_tv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:autoSizeMaxTextSize="45dp"
+            android:autoSizeMaxTextSize="35dp"
             android:autoSizeMinTextSize="10sp"
             android:autoSizeStepGranularity="2sp"
             android:autoSizeTextType="uniform"
